# polyscope

./: '  .clang-format  .gitignore  .gitmodules  .polyscope.ini  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  linux.yml  macos.yml  windows.yml
cmake/: cmake_config.cmake.in  cmake_uninstall.cmake.in  macros.cmake
examples/basic_project/: CMakeLists.txt  README.md  these_files.tgz
examples/basic_project/src/: CMakeLists.txt  main.cpp
examples/cuda-interop-demo/: CMakeLists.txt  cuda_interop_demo.cpp  cuda_interop_demo.cu  cuda_interop_demo.h
examples/demo-app/: CMakeLists.txt  demo_app.cpp  simple_dot_mesh_parser.cpp  simple_dot_mesh_parser.h  surface_mesh_io.cpp
examples/viewer-app/: CMakeLists.txt  viewer_app.cpp
include/polyscope/: affine_remapper.h  affine_remapper.ipp  camera_parameters.h  camera_parameters.ipp  camera_view.h  camera_view.ipp  check_invalid_values.h  color_bar.h  color_image_quantity.h  color_management.h  color_quantity.h  color_quantity.ipp  color_render_image.h  color_render_image_quantity.h  colors.h  combining_hash_functions.h  context.h  curve_network.h  curve_network.ipp  curve_network_color_quantity.h  curve_network_quantity.h  curve_network_scalar_quantity.h  curve_network_vector_quantity.h  custom_shader_quantity.h  depth_render_image.h  depth_render_image_quantity.h  disjoint_sets.h  elementary_geometry.h  file_helpers.h  floating_color_image.h  floating_quantities.h  floating_quantity.h  floating_quantity_structure.h  floating_quantity_structure.ipp  floating_render_image.h.old  floating_scalar_image.h  fullscreen_artist.h  gl_utils.h  ground_plane.h  group.h  (+121 more)
include/polyscope/gl/: color_maps.h  colormap_sets.h  colormaps.h  colors.h  gl_utils.h  ground_plane.h  shaders.h
include/polyscope/gl/materials/: materials.h
include/polyscope/gl/shaders/: common.h  cylinder_shaders.h  distance_shaders.h  ground_plane_shaders.h  histogram_shaders.h  image_shaders.h  parameterization_shaders.h  ray_shaders.h  ribbon_shaders.h  sphere_shaders.h  surface_shaders.h  texture_draw_shaders.h  vector_shaders.h  wireframe_shaders.h
include/polyscope/marchingcubes/: CIsoSurface.h  Vectors.h  mesh_implicit_surface.h
include/polyscope/render/: color_maps.h  colormap_defs.h  engine.h  engine.ipp  ground_plane.h  managed_buffer.h  managed_buffer.ipp  material_defs.h  materials.h  rules.h  shader_builder.h  shaders.h  templated_buffers.h  templated_buffers.ipp
include/polyscope/render/mock_opengl/: mock_gl_engine.h
include/polyscope/render/opengl/: egl_gl_engine.h  gl_engine.h  gl_engine_egl.h  gl_engine_glfw.h  gl_shaders.h
include/polyscope/render/opengl/shaders/: common.h  cylinder_shaders.h  gizmo_shaders.h  grid_shaders.h  ground_plane_shaders.h  histogram_shaders.h  lighting_shaders.h  ribbon_shaders.h  rules.h  sphere_shaders.h  surface_mesh_shaders.h  texture_draw_shaders.h  vector_shaders.h  volume_mesh_shaders.h
misc/: format_all_macOS.sh  generate_colormap_constant.py
misc/file2c/: file2c  file2cpp  file2cpp.c
misc/material_images/: .gitignore  bin2vector.c  image2material.cpp  images2material  images2material.c  imagesrgb2material.cpp  render_material.blend
src/: CMakeLists.txt  binary_font_cousine_regular.cpp  camera_parameters.cpp  camera_view.cpp  color_bar.cpp  color_image_quantity.cpp  color_management.cpp  color_render_image.cpp  color_render_image_quantity.cpp  curve_network.cpp  curve_network_color_quantity.cpp  curve_network_scalar_quantity.cpp  curve_network_vector_quantity.cpp  custom_shader_quantity.cpp  depth_render_image.cpp  depth_render_image_quantity.cpp  disjoint_sets.cpp  elementary_geometry.cpp  file_helpers.cpp  floating_color_image.cpp  floating_quantity.cpp  floating_quantity_structure.cpp  floating_render_image.cpp.old  floating_scalar_image.cpp  fullscreen_artist.cpp  gl_utils.cpp  ground_plane.cpp  group.cpp  halfedge_mesh.cpp  histogram.cpp  image_color_artist.cpp  image_quantity.cpp  image_quantity_base.cpp  image_scalar_artist.cpp  imgui_config.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_render.cpp  implicit_surface.cpp  internal.cpp  (+69 more)
src/demo-app/: CAT-Flattening.cpp  CMakeLists.txt  demo_app.cpp
src/gl/: color_maps.cpp  colormaps.cpp  gl_utils.cpp  ground_plane.cpp
src/gl/materials/: bindata_clay.cpp  bindata_mat_wax.cpp  bindata_metal.cpp  bindata_wax.cpp  materials.cpp
src/marchingcubes/: CIsoSurface.cpp  Vectors.cpp
src/render/: color_maps.cpp  engine.cpp  ground_plane.cpp  initialize_backend.cpp  managed_buffer.cpp  materials.cpp  shader_builder.cpp  templated_buffers.cpp
src/render/bindata/: bindata_candy.cpp  bindata_ceramic.cpp  bindata_clay.cpp  bindata_flat.cpp  bindata_font_cousine_regular.cpp  bindata_font_lato_regular.cpp  bindata_font_lucide_icons.cpp  bindata_jade.cpp  bindata_mat_wax.cpp  bindata_mud.cpp  bindata_normal.cpp  bindata_wax.cpp  concrete_seamless.cpp
src/render/mock_opengl/: mock_gl_engine.cpp
src/render/opengl/: gl_engine.cpp  gl_engine_egl.cpp  gl_engine_glfw.cpp
src/render/opengl/shaders/: common.cpp  cylinder_shaders.cpp  gizmo_shaders.cpp  grid_shaders.cpp  ground_plane_shaders.cpp  histogram_shaders.cpp  lighting_shaders.cpp  ribbon_shaders.cpp  rules.cpp  sphere_shaders.cpp  surface_mesh_shaders.cpp  texture_draw_shaders.cpp  vector_shaders.cpp  volume_mesh_shaders.cpp
src/viewer-app/: CMakeLists.txt  viewer-app.cpp  viewer_app.cpp
test/: CMakeLists.txt  CMakeLists.txt.in
test/include/: polyscope_test.h
test/src/: array_adaptors_test.cpp  basics_test.cpp  camera_view_test.cpp  combo_test.cpp  curve_network_test.cpp  floating_test.cpp  group_test.cpp  interop_and_serialization_test.cpp  main_test.cpp  misc_test.cpp  point_cloud_test.cpp  sparse_volume_grid_test.cpp  surface_mesh_test.cpp  viewport_test.cpp  volume_grid_test.cpp  volume_mesh_test.cpp
